--- a/block-BNaacu/package.json
+++ b/block-BNaacu/package.json
@@ -9,6 +9,7 @@
   "author": "AltCampus",
   "license": "GNU GPL V3",
   "dependencies": {
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "process": "^0.11.10"
   }
 }
