--- a/block-BNaadi/user-diary-2/package.json
+++ b/block-BNaadi/user-diary-2/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^5.12.9",
-    "routes": "^2.1.0"
+    "mongoose": "^5.12.9"
   }
 }
